Set a java version